add_library(apduinterface_pcsc SHARED pcsc.c)
target_link_libraries(apduinterface_pcsc euicc cjson-static)
set_target_properties(apduinterface_pcsc PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
set_target_properties(apduinterface_pcsc PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
install(TARGETS apduinterface_pcsc LIBRARY DESTINATION lib/lpac)

if(MINGW OR CYGWIN)
    target_link_libraries(apduinterface_pcsc winscard)
elseif(APPLE)
    target_link_libraries(apduinterface_pcsc "-framework PCSC")
else()
    find_package(PCSCLite)
    target_link_libraries(apduinterface_pcsc PCSCLite::PCSCLite)
endif()

add_library(apduinterface_at SHARED at.c)
target_link_libraries(apduinterface_at euicc)
set_target_properties(apduinterface_at PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
set_target_properties(apduinterface_at PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
install(TARGETS apduinterface_at LIBRARY DESTINATION lib/lpac)

add_library(apduinterface_stdio SHARED stdio.c)
target_link_libraries(apduinterface_stdio euicc cjson-static)
set_target_properties(apduinterface_stdio PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
set_target_properties(apduinterface_stdio PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/output")
install(TARGETS apduinterface_stdio LIBRARY DESTINATION lib/lpac)
